further fixes on mobile css

--- a/admin/css/qinvoice_buttons.css
+++ b/admin/css/qinvoice_buttons.css
@@ -304,6 +304,12 @@ border: 1px solid #dadce1;
   }
 }
 
+@media only screen and (max-width:590px){
+  .q-invoice-page button#qInvc-add-line{
+    margin-left: 0px;
+  }
+}
+
 
 @media only screen and (max-width:500px){
   .q-invoice-page div.filterButton{
